--- a/css/main.css
+++ b/css/main.css
@@ -1,265 +1,267 @@
-/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
+/* line 17, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
 
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
+/* line 22, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
+  line-height: 1;
 }
 
-/*
- * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
+/* line 24, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none;
 }
 
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+/* line 26, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+/* line 28, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
 }
 
-/*
- * Remove the gap between images, videos, audio and canvas and the bottom of
- * their containers: h5bp.com/i/440
- */
-
-audio,
-canvas,
-img,
-svg,
-video {
-    vertical-align: middle;
+/* line 30, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: none;
+}
+/* line 103, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+  content: none;
 }
 
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+/* line 32, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none;
 }
 
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
+/* line 116, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+  display: block;
 }
 
-/* ==========================================================================
-   Browse Happy prompt
-   ========================================================================== */
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+/*-----------------
+	COLORS
+-----------------*/
+/*-----------------
+	FONTS
+-----------------*/
+/*--------------
+ 	MIXINS
+ --------------*/
+/* line 4, ../sass/main.scss */
+.weatherpix {
+  min-width: 960px;
+  width: 100%;
+  font-family: Oswald, sans-serif;
+  /*.cover-art*/
+  /*.wrapper*/
+}
+/* line 9, ../sass/main.scss */
+.weatherpix .cover-art {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+/* line 17, ../sass/main.scss */
+.weatherpix .cover-art img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+/* line 26, ../sass/main.scss */
+.weatherpix .wrapper {
+  position: relative;
+  z-index: 1;
+  width: 540px;
+  overflow: auto;
+  margin: 0 auto;
+  /*header*/
+  /*.location*/
+  /*.weather*/
+}
+/* line 33, ../sass/main.scss */
+.weatherpix .wrapper header {
+  width: 540px;
+  overflow: auto;
+  margin: 125px auto 0;
+  text-align: center;
+  background: url("../images/header-bg.png") no-repeat 0 center;
+}
+/* line 39, ../sass/main.scss */
+.weatherpix .wrapper header .logo {
+  width: 335px;
+  margin: 35px auto 15px;
+  padding: 0 0 20px;
+  font-family: WisdomScript, Arial, sans-serif;
+  font-size: 70px;
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(0, 0, 0, 0.3);
+  border-bottom: 1px white solid;
+}
+/* line 49, ../sass/main.scss */
+.weatherpix .wrapper header .lead-in {
+  width: 335px;
+  margin: 15px auto;
+  font-weight: 300;
+  font-size: 22px;
+  color: white;
+  text-transform: uppercase;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(0, 0, 0, 0.3);
+}
+/* line 60, ../sass/main.scss */
+.weatherpix .wrapper .location {
+  margin: 30px auto;
+}
+/* line 62, ../sass/main.scss */
+.weatherpix .wrapper .location .input-group {
+  text-align: center;
+}
+/* line 64, ../sass/main.scss */
+.weatherpix .wrapper .location .input-group input {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 280px;
+  background: rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  outline: none;
+  margin-right: 5px;
+  padding: 5px 20px;
+  font-size: 20px;
+  font-weight: 300;
+  color: #1e1e1e;
+  text-align: left;
+}
+/* line 78, ../sass/main.scss */
+.weatherpix .wrapper .location .input-group input::-webkit-input-placeholder {
+  font-weight: 300;
+  color: #1e1e1e;
+}
+/* line 79, ../sass/main.scss */
+.weatherpix .wrapper .location .input-group input:-moz-placeholder {
+  font-weight: 300;
+  color: #1e1e1e;
+}
+/* line 80, ../sass/main.scss */
+.weatherpix .wrapper .location .input-group input::-moz-placeholder {
+  font-weight: 300;
+  color: #1e1e1e;
+}
+/* line 81, ../sass/main.scss */
+.weatherpix .wrapper .location .input-group input:-ms-input-placeholder {
+  font-weight: 300;
+  color: #1e1e1e;
+}
+/* line 83, ../sass/main.scss */
+.weatherpix .wrapper .location .input-group button {
+  background: rgba(0, 0, 0, 0.6);
+  border: 1px solid rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  outline: none;
+  padding: 10px 15px;
+  font-size: 18px;
+  font-weight: 300;
+  color: white;
+  text-transform: uppercase;
+}
+/* line 95, ../sass/main.scss */
+.weatherpix .wrapper .location .error-msg {
+  display: none;
+  margin: 20px 70px;
+  background: rgba(0, 0, 0, 0.6);
+  border: 1px solid rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  padding: 6px 15px 8px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  color: white;
+  text-align: center;
+}
+/* line 109, ../sass/main.scss */
+.weatherpix .wrapper .location.error .error-msg {
+  display: block;
+}
+/* line 115, ../sass/main.scss */
+.weatherpix .wrapper .weather {
+  width: 450px;
+  margin: 0 auto;
+  /*.forecast*/
+}
+/* line 118, ../sass/main.scss */
+.weatherpix .wrapper .weather .loader {
+  margin: 20px auto;
+  width: 128px;
+  height: 128px;
+  background: url("../images/loader.gif") no-repeat;
+}
+/* line 125, ../sass/main.scss */
+.weatherpix .wrapper .weather .forecast p {
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 0 rgba(0, 0, 0, 0.3);
+}
+/* line 128, ../sass/main.scss */
+.weatherpix .wrapper .weather .forecast p.icon {
+  float: left;
+  width: 200px;
+  margin-right: 20px;
+  font-family: MeteoconsRegular, sans-serif;
+  font-size: 160px;
+  text-align: right;
+}
+/* line 136, ../sass/main.scss */
+.weatherpix .wrapper .weather .forecast p.temp {
+  float: right;
+  width: 210px;
+  font-family: Oswald, sans-serif;
+  font-size: 132px;
+  font-weight: 300;
+  text-align: left;
+}
+/* line 145, ../sass/main.scss */
+.weatherpix .wrapper .weather .forecast:after {
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  overflow: hidden;
+}
+/* line 152, ../sass/main.scss */
+.weatherpix .pac-container {
+  font-family: Oswald, sans-serif;
 }
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers: h5bp.com/u
- */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-/*
- * Hide only visually, but have it available for screen readers: h5bp.com/v
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element to be focusable
- * when navigated to via the keyboard: h5bp.com/p
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid required HTTP connection: h5bp.com/r
-   ========================================================================== */
-
-@media print {
-    * {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links for images, or javascript/internal links
-     */
-
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group; /* h5bp.com/t */
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+/*.weatherpix*/
